automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    },
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = countries[1:4None\n",
     "kindof_neighbors"
    ]
   },
