--- a/index.ipynb
+++ b/index.ipynb
@@ -430,13 +430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = setNone"
+    "unique_countries = set(countries)"
    ]
   },
   {
